--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,8 @@
   <img
     class="d-block mx-auto mb-4"
     src="/logo180.png"
-    alt="WTRBC"
+    srcset="/logo512.png 2x"
+    alt="WTRBC Logo"
     width="180"
     height="180"
   />
